# naunet

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  macos.yml  ubuntu.yml
API/: species.html
API/reaction/: index.html
API/species/: index.html
docs/: index.md
docs/API/: reaction.md  species.md
gac/: __init__.py  auxiliary.py  initialize.py  kidareaction.py  network.py  reaction.py  settings.py  singleton.py  species.py
gac/console/: application.py
gac/console/commands/: init.py
gac/cxx_src/: test.cpp
gac/cxx_src/cvode_example/src/: CMakeLists.txt  main.cpp
gac/reactions/: kidareaction.py  reaction.py
naunet/: auxiliary.py  chemistry.py  component.py  configuration.py  network.py  patches.py  patchmaker.py  reactiontype.py  settings.py  species.py  templateloader.py  thermalprocess.py  utilities.py
naunet/chemistry/: __init__.py  enthalpytable.csv  isotopestable.csv
naunet/chemistrydata/: __init__.py  enthalpytable.csv
naunet/console/: application.py
naunet/console/commands/: __init__.py  command.py  example.py  extend.py  init.py  new.py  render.py
naunet/cxx_src/cvode_example/: CMakeLists.txt
naunet/cxx_src/cvode_example/include/: cv_fex.h.j2  cv_jac.h.j2  cv_jtv.h.j2  naunet.h  naunet_constants.h.j2  naunet_ode.h.j2  naunet_timer.h  naunet_userdata.h.j2  userdata.h
naunet/cxx_src/cvode_example/src/: CMakeLists.txt  cv_fex.cpp.j2  cv_jac.cpp.j2  cv_jtv.cpp.j2  main.cpp  naunet.cpp  naunet_ode.cpp.j2  ref.cpp
naunet/cxx_src/cvode_example/test/: CMakeLists.txt  main.cpp
naunet/dusts/: __init__.py  dust.py  hh93dust.py  rr07dust.py  unidust.py
naunet/examples/cloud/: __init__.py
naunet/examples/cloud/test/: CMakeLists.txt  multiplegrid.cpp  singlegrid.cpp  test.py.in
naunet/examples/deuterium/: __init__.py  deuterium.krome
naunet/examples/deuterium/test/: CMakeLists.txt  main.cpp  multiplegrid.cpp  parallel.cpp  paralleldata.cpp  readme.md  serialdata.cpp  singlegrid.cpp  test.py.in
naunet/examples/empty/: __init__.py
naunet/examples/empty/test/: CMakeLists.txt  multiplegrid.cpp  singlegrid.cpp  test.py.in
naunet/examples/fake/: __init__.py  fake.krome
naunet/examples/fake/test/: CMakeLists.txt  multiplegrid.cpp  singlegrid.cpp  test.py.in
naunet/examples/ism/: __init__.py
naunet/examples/ism/test/: CMakeLists.txt  multiplegrid.cpp  parallel.cpp  singlegrid.cpp  test.py.in
naunet/examples/minimal/: __init__.py
naunet/examples/primordial/: __init__.py  primordial.krome
naunet/examples/primordial/test/: CMakeLists.txt  multiplegrid.cpp  singlegrid.cpp  test.py.in
naunet/examples/template/test/: CMakeLists.txt  multiplegrid.cpp  singlegrid.cpp  test.py.in
naunet/grains/: __init__.py  grain.py  hh93grain.py  rr07grain.py
naunet/reactions/: __init__.py  converter.py  kidareaction.py  kromereaction.py  leedsreaction.py  reaction.py  reactiontype.py  uclchemreaction.py  umistreaction.py
naunet/templates/base/: demo.ipynb
naunet/templates/base/cpp/: CMakeLists.txt.j2
naunet/templates/common/: demo.ipynb
naunet/templates/common/include/: naunet_constants.h.j2  naunet_data.h.j2  naunet_macros.h.j2  naunet_physics.h.j2  naunet_utilities.h.j2
naunet/templates/common/src/: naunet_physics.cpp.j2  naunet_utilities.cpp.j2
naunet/templates/cvode/: CMakeLists.txt  CMakeLists.txt.j2
naunet/templates/cvode/include/: naunet.h  naunet.h.j2  naunet_constants.h.j2  naunet_macros.h.j2  naunet_ode.h.j2  naunet_physics.h.j2  naunet_renorm.h.j2  naunet_timer.h  naunet_timer.h.j2  naunet_userdata.h.j2  naunet_utilities.h.j2
naunet/templates/cvode/src/: CMakeLists.txt  CMakeLists.txt.j2  naunet.cpp.j2  naunet_fex.cpp.j2  naunet_jac.cpp.j2  naunet_ode.cpp.j2  naunet_physics.cpp.j2  naunet_rates.cpp.j2  naunet_renorm.cpp.j2  naunet_utilities.cpp.j2
naunet/templates/cvode/test/: CMakeLists.txt  CMakeLists.txt.j2  main.cpp
naunet/templates/data/: COshielding_11.2bH2_5e20nH.dat.j2  COshielding_VB88.dat.j2  H2shielding.dat.j2  N2shielding_11.2bH2_1e20nH.dat.j2
naunet/templates/odeint/: CMakeLists.txt.j2
naunet/templates/odeint/include/: naunet.h.j2  naunet_constants.h.j2  naunet_data.h.j2  naunet_macros.h.j2  naunet_ode.h.j2  naunet_physics.h.j2  naunet_renorm.h.j2  naunet_timer.h  naunet_userdata.h.j2  naunet_utilities.h.j2
naunet/templates/odeint/python/: CMakeLists.txt.j2  setup.py.in.j2
naunet/templates/odeint/src/: CMakeLists.txt.j2  naunet.cpp.j2  naunet_constants.cpp.j2  naunet_ode.cpp.j2  naunet_physics.cpp.j2  naunet_renorm.cpp.j2
naunet/templates/odeint/test/: CMakeLists.txt.j2  main.cpp
naunet/templates/patches/enzo/: Grid.h.j2  Grid_IdentifyNaunetSpeciesFields.C.j2  Grid_MultiSpeciesHandler.C  Grid_NaunetWrapper.C.j2  InitializeNew.C  Make.config.assemble  (+9 more)
notebook/: benchmark.ipynb
notebooks/: benchmarkism.ipynb  benchmarkkrome.ipynb
scripts/actions/: build_examples.sh  create_examples.sh  install_cuda_ubuntu.sh  install_suitesparse.sh  install_sundials.sh  test_examples.sh
search/: search_index.json
test/: test_configuration.py  test_converter.py  test_module.py  test_network.py  test_reaction.py  test_species.py  test_thermalprocess.py
test/console/commands/: test_new.py
test/reactions/: test_kidareaction.py  test_leedsreaction.py  test_reaction.py  test_umistreaction.py
test/test_input/: fake.kida  rate12_twobody_HO.rates  react_SM.krome
tests/: conftest.py  test_component.py  test_configuration.py  test_converter.py  test_network.py  test_patches.py  test_patchmaker.py  test_species.py  test_templateloader.py  test_thermalprocess.py
tests/console/commands/: test_example.py  test_new.py
tests/data/: duplicate.kida  minimal.kida  minimal.krome  minimal.leeds  minimal.ucl  minimal.umist  multiduplicate.kida  primordial.krome  rate12_HO.leeds
tests/dusts/: test_dust.py  test_hh93dust.py  test_rr07dust.py
tests/grains/: test_grain.py  test_hh93grain.py  test_rr07grain.py
tests/reactions/: test_kidareaction.py  test_leedsreaction.py  test_reaction.py  test_umistreaction.py
(+64 files in other folders)
