[tool.poetry]
name = "naunet"
version = "0.3.0-alpha"
description = ""
authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
Jinja2 = "^2.11.2"
tomlkit = "^0.7.0"
tqdm = "^4.58.0"
lark = "^0.11.1"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
coverage = "^5.4"
black = {version = "^20.8b1", allow-prereleases = true}
numpy = "^1.20.3"
mkdocstrings-python = "^0.6.5"
mkdocs-material = "^8.2.5"

[tool.poetry.scripts]
naunet = "naunet.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
