[tool.poetry]
name = "naunet"
version = "0.4.2"
description = ""
authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.7.0"
cleo = "^0.8.1"
Jinja2 = "^3.0.0"
tqdm = "^4.58.0"
lark = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
coverage = "^7.4.0"
numpy = "^1.20.3"
mkdocstrings-python = "^1.7.5"
mkdocs-material = "^9.5.3"
pre-commit = "^2.18.1"

[tool.poetry.scripts]
naunet = "naunet.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
