[tool.poetry]
name = "naunet"
version = "0.4.2"
description = ""
authors = ["Chia-Jung Hsu <appolloford@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "^0.11.4"
cleo = "^2.0.1"
Jinja2 = "^3.0.0"
tqdm = "*"
lark = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
coverage = "^7.4.0"
numpy = "*"
mkdocstrings-python = "^1.7.5"
mkdocs-material = "^9.5.3"
pre-commit = "*"

[tool.poetry.scripts]
naunet = "naunet.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
